Pending changes exported from your codespace

--- a/1.html
+++ b/1.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
-<title>Travis Scott</title>
-<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="style1.css">
+	<title>Travis Scott</title>
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style1.css">
 </head>
+
 <body>
-<div class="main">
-<div class="logo">
-<div class="anim2">Travis Scott</div>
-</div>
-	<div class="tresc">
-<h2><a href="#ogol">Opis</a> | <a href="#albumy">Albumy</a> | <a href="#tworczosc">Twórczość</a> | </h2>
-<a name="ogol"><p><a href=https://pl.wikipedia.org/wiki/Travis_Scott target="_blank">Travis Scott </a><p>właśc. Jacques Berman Webster II (ur. 30 kwietnia 1991 w Houston) – amerykański raper, wokalista i producent muzyczny.W roku 2009 razem z Chrisem Holloway’em wypuścił pierwszą Ep-kę jako duet The Graduates na myspace, natomiast w 2010 roku stworzył formację The Classmates z OG Chess i wypuścili dwa albumy „Buddy Rich” i „Cruis’n Usa”. W 2012 Scott podpisał swój pierwszy kontrakt z wytwórnią Epic Records. W listopadzie tego samego roku, po wystąpieniu na kompilacyjnym albumie – Cruel Summer, podpisał także kontrakt z wytwórnią Kanye’go Westa – GOOD Music. W kwietniu 2013 oficjalnie ogłoszono, że Scott podpisał kontrakt z wytwórnią płytową amerykańskiego rapera T.I. – Grand Hustle Records.
-Pierwszy mixtape Scotta – Owl Pharaoh, został wydany 21 maja 2013. Rok później ukazał się kolejny mixtape – Days Before Rodeo. Debiutancki album studyjny – Rodeo, który zawierał singiel Antidote, został wydany we wrześniu 2015. Drugi album – Birds in the Trap Sing McKnight zawierający utwór goosebumps, nagrany przez artystę wraz z Kendrickiem Lamarem, ujrzał światło dzienne 2 września 2016. Wszystkie publikacje otrzymały pozytywne recenzje.W 2017 roku Travis i raper Quavo wspólnie wydali album kolaboracyjny – Huncho Jack, Jack Huncho, pod pseudonimem Huncho Jack.3 sierpnia 2018 roku ukazał się jego trzeci album – Astroworld. Pierwsze zapowiedzi albumu pojawiały się jeszcze dwa lata przed jego premierą. Travis mówi o nim jako o albumie skupiającym najlepszą muzykę jaką potrafi stworzyć. 28 lipca 2023 roku Scott wydał swój czwarty album – Utopia.</p></a>
-		<hr>
-<h2><a name="albumy"><b>Albumy</b></h2>
-<ul type="disc">
-<li>utopia</li>
-<li>Astroworld</li>
-<li>Rodeo</li>
-<li>jackboys</li>
-<li>Birds in the Trap sing McKnight</li>
-<li>Days before rodeo</li>
-<li>Owl Pharaoh</li>
-</ul></a>
-<hr>
-<h2><a name="tworczosc"><b>Muzyka</b></a></h2>
-<table class="anim3">
-<tr>
-<td>SICKO MODE</td>
-<td>My eyes</td>
-<td>FE!N</td>
-<td>The highest in the room</td>
-<td>goosebumps</td>
-</tr>
-</table>
-</div>
+	<div class="main">
+		<div class="logo">
+			<div class="anim2">Travis Scott</div>
+		</div>
+		<div class="tresc">
+			<h2><a href="#ogol">Opis</a> | <a href="#albumy">Albumy</a> | <a href="#tworczosc">Twórczość</a> | </h2>
+			<a name="ogol">
+				<p><a href=https://pl.wikipedia.org/wiki/Travis_Scott target="_blank">Travis Scott </a>
+					<p>właśc. Jacques Berman Webster II (ur. 30 kwietnia 1991 w Houston) – amerykański raper, wokalista i producent muzyczny.W roku 2009 razem z Chrisem Holloway’em wypuścił pierwszą Ep-kę jako duet The Graduates na myspace, natomiast w 2010 roku stworzył formację The Classmates z OG Chess i wypuścili dwa albumy „Buddy Rich” i „Cruis’n Usa”. W 2012 Scott podpisał swój pierwszy kontrakt z wytwórnią Epic Records. W listopadzie tego samego roku, po wystąpieniu na kompilacyjnym albumie – Cruel Summer, podpisał także kontrakt z wytwórnią Kanye’go Westa – GOOD Music. W kwietniu 2013 oficjalnie ogłoszono, że Scott podpisał kontrakt z wytwórnią płytową amerykańskiego rapera T.I. – Grand Hustle Records. Pierwszy mixtape Scotta – Owl Pharaoh, został wydany 21 maja 2013. Rok później ukazał się kolejny mixtape – Days Before Rodeo. Debiutancki album studyjny – Rodeo, który zawierał singiel Antidote, został wydany we wrześniu 2015. Drugi album – Birds in the Trap Sing McKnight zawierający utwór goosebumps, nagrany przez artystę wraz z Kendrickiem Lamarem, ujrzał światło dzienne 2 września 2016. Wszystkie publikacje otrzymały pozytywne recenzje.W 2017 roku Travis i raper Quavo wspólnie wydali album kolaboracyjny – Huncho Jack, Jack Huncho, pod pseudonimem Huncho Jack.3 sierpnia 2018 roku ukazał się jego trzeci album – Astroworld. Pierwsze zapowiedzi albumu pojawiały się jeszcze dwa lata przed jego premierą. Travis mówi o nim jako o albumie skupiającym najlepszą muzykę jaką potrafi stworzyć. 28 lipca 2023 roku Scott wydał swój czwarty album – Utopia.</p>
+			</a>
+			<hr>
+			<h2><a name="albumy"><b>Albumy</b></h2>
+			<ul type="disc">
+				<li>utopia</li>
+				<li>Astroworld</li>
+				<li>Rodeo</li>
+				<li>jackboys</li>
+				<li>Birds in the Trap sing McKnight</li>
+				<li>Days before rodeo</li>
+				<li>Owl Pharaoh</li>
+			</ul></a>
+			<hr>
+			<h2><a name="tworczosc"><b>Muzyka</b></a></h2>
+			<table class="anim3">
+				<tr>
+					<td>SICKO MODE</td>
+					<td>My eyes</td>
+					<td>FE!N</td>
+					<td>The highest in the room</td>
+					<td>goosebumps</td>
+				</tr>
+			</table>
+		</div>
 	</div>
-</div>
+	</div>
 </body>
+
 </html>
