--- a/2.html
+++ b/2.html
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
-<title>Yeat</title>
-<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="style1.css">
+	<title>Yeat</title>
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style1.css">
 </head>
+
 <body>
-<div class="main">
-<div class="logo">
-<div class="anim2">Yeat</div>
-</div>
-	<div class="tresc">
-  <h2><a href="#ogol1">Opis</a> | <a href="#albumy1">Albumy</a> | <a href="#tworczosc1">Twórczość</a> | </h2>
-<a name="ogol1"><p><a href=https://en.wikipedia.org/wiki/Yeat target="_blank">Noah Olivier Smith </a>(urodzony 26 lutego 2000), znany zawodowo jako Yeat (czasami stylizowany na YEAT / ˈj iː t / YEET ) , to amerykański raper, piosenkarz, autor tekstów i producent muzyczny znany ze swojego eksperymentalnego brzmienia, unikalnego żargonu i niekonwencjonalnego wyczucia mody, obejmującego mieszankę marek designerskich i kominiarek . Yeat zyskał na znaczeniu w połowie 2021 r. po wydaniu swojego mixtape'u 4L i debiutanckiego albumu studyjnego Up 2 Me , a utwory „ Money So Big ” i „Get Busy” z tego ostatniego zyskały znaczną popularność w TikTok . W 2022 roku wydał swój drugi album studyjny 2 Alive oraz EP Lyfe , przy czym oba projekty zadebiutowały w pierwszej dziesiątce listy Billboard 200 . W 2023 roku wydał swój trzeci album studyjny Afterlyfe , który zadebiutował na czwartym miejscu listy Billboard 200 i znalazł się w piosence Drake'a „ IDGAF ” z albumu For All the Dogs ; utwór zadebiutował na drugim miejscu listy Billboard Hot 100 i na pierwszym miejscu listy Global 200 .</p></a>
-<a name="albumy1"><b>Albumy</b>
-<ul type="disc">
-<li>Up 2 Më</li>
-<li>2 Alivë</li>
-<li>Lyfë</li>
-<li>Aftërlyfe</li>
-<li>4L</li>
-<li>Lyfëstyle - wkrótce</li>
-</ul></a>
-<hr>
-<a name="tworczosc1"><b>Muzyka</b></a>
-<table class="anim3">
-<tr>
-<td>Nun id change</td><td>Already rich</td><td>Talk</td><td>Turban</td><td>Money so big</td>
-</tr>
-</table>
-</div>
+	<div class="main">
+		<div class="logo">
+			<div class="anim2">Yeat</div>
+		</div>
+		<div class="tresc">
+			<h2><a href="#ogol1">Opis</a> | <a href="#albumy1">Albumy</a> | <a href="#tworczosc1">Twórczość</a> | </h2>
+			<a name="ogol1">
+				<p><a href=https://en.wikipedia.org/wiki/Yeat target="_blank">Noah Olivier Smith </a>(urodzony 26 lutego 2000), znany zawodowo jako Yeat (czasami stylizowany na YEAT / ˈj iː t / YEET ) , to amerykański raper, piosenkarz, autor tekstów i producent muzyczny znany ze swojego eksperymentalnego brzmienia, unikalnego żargonu i niekonwencjonalnego wyczucia mody, obejmującego mieszankę marek designerskich i kominiarek . Yeat zyskał na znaczeniu w połowie 2021 r. po wydaniu swojego mixtape'u 4L i debiutanckiego albumu studyjnego Up 2 Me , a utwory „ Money So Big ” i „Get Busy” z tego ostatniego zyskały znaczną popularność w TikTok . W 2022 roku wydał swój drugi album studyjny 2 Alive oraz EP Lyfe , przy czym oba projekty zadebiutowały w pierwszej dziesiątce listy Billboard 200 . W 2023 roku wydał swój trzeci album studyjny Afterlyfe , który zadebiutował na czwartym miejscu listy Billboard 200 i znalazł się w piosence Drake'a „ IDGAF ” z albumu For All the Dogs ; utwór zadebiutował na drugim miejscu listy Billboard Hot 100 i na pierwszym miejscu listy Global 200 .</p>
+			</a>
+			<a name="albumy1"><b>Albumy</b>
+				<ul type="disc">
+					<li>Up 2 Më</li>
+					<li>2 Alivë</li>
+					<li>Lyfë</li>
+					<li>Aftërlyfe</li>
+					<li>4L</li>
+					<li>Lyfëstyle - wkrótce</li>
+				</ul>
+			</a>
+			<hr>
+			<a name="tworczosc1"><b>Muzyka</b></a>
+			<table class="anim3">
+				<tr>
+					<td>Nun id change</td>
+					<td>Already rich</td>
+					<td>Talk</td>
+					<td>Turban</td>
+					<td>Money so big</td>
+				</tr>
+			</table>
+		</div>
 	</div>
-</div>
+	</div>
 </body>
+
 </html>
