--- a/4.html
+++ b/4.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
-<title>Eminem</title>
-<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="style1.css">
+	<title>Eminem</title>
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style1.css">
 </head>
+
 <body>
-<div class="main">
-<div class="logo">
-<div class="anim2">Eminem</div>
-</div>
-	<div class="tresc">
-  <h2><a href="#ogol3">Opis</a> | <a href="#albumy3">Albumy</a> | <a href="#tworczosc3">Twórczość</a> | </h2>
-<a name="ogol3"><p><a href=https://pl.wikipedia.org/wiki/Eminem target="_blank">Eminem </a>właśc. Marshall Bruce Mathers III (ur. 17 października 1972 w St. Joseph) – amerykański raper, producent oraz aktor. Członek amerykańskiej grupy hiphopowej D12 oraz część duetu hiphopowego z Detroit – Bad Meets Evil, który tworzy wraz z Royce da 5'9". Piętnastokrotny zdobywca Nagrody Grammy oraz laureat Oscara. W 2022 wprowadzony do Rock and Roll Hall of Fame.Eminem jest jednym z najlepiej sprzedających się artystów na świecie oraz najlepiej sprzedającym się artystą pierwszej dekady XXI wieku. Dwutygodnik „Rolling Stone” sklasyfikował go na 83. miejscu na liście 100 najlepszych artystów wszech czasów. Ten sam magazyn nazwał Eminema „Królem Hip Hopu”. Wliczając twórczość z D12 oraz Bad Meets Evil, Eminem osiągnął 10 albumów nr 1 na listach Billboard 200. Raper sprzedał ponad 240 milionów płyt na całym świecie. Jest jednocześnie dzięki temu na szczycie listy najlepiej sprzedających się raperów.</p></a>
-<a name="albumy3"><b>Albumy</b>
-<ul type="disc">
-<li>Kamikaze</li>
-<li>The slim shady LP</li>
-<li>Encore</li>
-<li>The eminem show</li>
-<li>Revival</li>
-<li>Infinite</li>
-</ul></a>
-<hr>
-<a name="tworczosc3"><b>Muzyka</b></a>
-<table class="anim3">
-<tr>
-<td>Venom</td><td>The real slim shady</td><td>Without me</td><td>Rap god</td><td>Till I collapse</td>
-</tr>
-</table>
-</div>
-</div>
+	<div class="main">
+		<div class="logo">
+			<div class="anim2">Eminem</div>
+		</div>
+		<div class="tresc">
+			<h2><a href="#ogol3">Opis</a> | <a href="#albumy3">Albumy</a> | <a href="#tworczosc3">Twórczość</a> | </h2>
+			<a name="ogol3">
+				<p><a href=https://pl.wikipedia.org/wiki/Eminem target="_blank">Eminem </a>właśc. Marshall Bruce Mathers III (ur. 17 października 1972 w St. Joseph) – amerykański raper, producent oraz aktor. Członek amerykańskiej grupy hiphopowej D12 oraz część duetu hiphopowego z Detroit – Bad Meets Evil, który tworzy wraz z Royce da 5'9". Piętnastokrotny zdobywca Nagrody Grammy oraz laureat Oscara. W 2022 wprowadzony do Rock and Roll Hall of Fame.Eminem jest jednym z najlepiej sprzedających się artystów na świecie oraz najlepiej sprzedającym się artystą pierwszej dekady XXI wieku. Dwutygodnik „Rolling Stone” sklasyfikował go na 83. miejscu na liście 100 najlepszych artystów wszech czasów. Ten sam magazyn nazwał Eminema „Królem Hip Hopu”. Wliczając twórczość z D12 oraz Bad Meets Evil, Eminem osiągnął 10 albumów nr 1 na listach Billboard 200. Raper sprzedał ponad 240 milionów płyt na całym świecie. Jest jednocześnie dzięki temu na szczycie listy najlepiej sprzedających się raperów.</p>
+			</a>
+			<a name="albumy3"><b>Albumy</b>
+				<ul type="disc">
+					<li>Kamikaze</li>
+					<li>The slim shady LP</li>
+					<li>Encore</li>
+					<li>The eminem show</li>
+					<li>Revival</li>
+					<li>Infinite</li>
+				</ul>
+			</a>
+			<hr>
+			<a name="tworczosc3"><b>Muzyka</b></a>
+			<table class="anim3">
+				<tr>
+					<td>Venom</td>
+					<td>The real slim shady</td>
+					<td>Without me</td>
+					<td>Rap god</td>
+					<td>Till I collapse</td>
+				</tr>
+			</table>
+		</div>
+	</div>
 </body>
+
 </html>
