--- a/5.html
+++ b/5.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
-<title>Playboi Carti</title>
-<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="style1.css">
+	<title>Playboi Carti</title>
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style1.css">
 </head>
+
 <body>
-<div class="main">
-<div class="logo">
-<div class="anim2">Playboi Carti</div>
-</div>
-	<div class="tresc">
-  <h2><a href="#ogol4">Opis</a> | <a href="#albumy4">Albumy</a> | <a href="#tworczosc4">Twórczość</a> | </h2>
-<a name="ogol4"><p><a href=https://pl.wikipedia.org/wiki/Playboi_Carti target="_blank">Playboi Carti </a>właśc. Jordan Terrell Carter (ur. 13 września 1996 w Atlancie) – amerykański raper, piosenkarz i autor tekstów. Jest rozpoznawany przez swój styl muzyczny, teksty które mamrocze i gotycki styl ubioru.Urodzony i wychowany w Atlancie.Początkowo podpisał kontrakt z lokalną undergroundową wytwórnią Awful Records przed podpisaniem kontraktu z AWGE Label i ASAP Mob w ramach wytwórni Interscope Records. Carti zwrócił na siebie uwagę w 2017 roku.Debiutancki mixtape Cartiego został wydany w kwietniu 2017 roku i zawierał single z listy Billboard Hot 100 „Magnolia” i „Woke Up Like This”. Jego debiutancki album studyjny Die Lit (2018) zadebiutował na 3. miejscu na liście Billboard 200. Po dwuletniej przerwie wydał długo wyczekiwany drugi album o nazwie Whole Lotta Red (2020). Album zadebiutował na pierwszym miejscu listy Billboard 200 i stał się jego pierwszym albumem na szczycie listy przebojów.</p></a>
-<a name="albumy4"><b>Albumy</b>
-<ul type="disc">
-<li>Whole lotta red</li>
-<li>Die lit</li>
-<li>Playboi Carti</li>
-<li>In abundance</li>
-<li>THC</li>
-<li>Young Mi$fit</li>
-</ul></a>
-<hr>
-<a name="tworczosc4"><b>Muzyka</b></a>
-<table class="anim3">
-<tr>
-<td>New tank</td><td>Rockstar Made</td><td>Sky</td><td>Magnolia</td><td>Vamp anthem</td>
-</tr>
-</table>
-</div>
-</div>
+	<div class="main">
+		<div class="logo">
+			<div class="anim2">Playboi Carti</div>
+		</div>
+		<div class="tresc">
+			<h2><a href="#ogol4">Opis</a> | <a href="#albumy4">Albumy</a> | <a href="#tworczosc4">Twórczość</a> | </h2>
+			<a name="ogol4">
+				<p><a href=https://pl.wikipedia.org/wiki/Playboi_Carti target="_blank">Playboi Carti </a>właśc. Jordan Terrell Carter (ur. 13 września 1996 w Atlancie) – amerykański raper, piosenkarz i autor tekstów. Jest rozpoznawany przez swój styl muzyczny, teksty które mamrocze i gotycki styl ubioru.Urodzony i wychowany w Atlancie.Początkowo podpisał kontrakt z lokalną undergroundową wytwórnią Awful Records przed podpisaniem kontraktu z AWGE Label i ASAP Mob w ramach wytwórni Interscope Records. Carti zwrócił na siebie uwagę w 2017 roku.Debiutancki mixtape Cartiego został wydany w kwietniu 2017 roku i zawierał single z listy Billboard Hot 100 „Magnolia” i „Woke Up Like This”. Jego debiutancki album studyjny Die Lit (2018) zadebiutował na 3. miejscu na liście Billboard 200. Po dwuletniej przerwie wydał długo wyczekiwany drugi album o nazwie Whole Lotta Red (2020). Album zadebiutował na pierwszym miejscu listy Billboard 200 i stał się jego pierwszym albumem na szczycie listy przebojów.</p>
+			</a>
+			<a name="albumy4"><b>Albumy</b>
+				<ul type="disc">
+					<li>Whole lotta red</li>
+					<li>Die lit</li>
+					<li>Playboi Carti</li>
+					<li>In abundance</li>
+					<li>THC</li>
+					<li>Young Mi$fit</li>
+				</ul>
+			</a>
+			<hr>
+			<a name="tworczosc4"><b>Muzyka</b></a>
+			<table class="anim3">
+				<tr>
+					<td>New tank</td>
+					<td>Rockstar Made</td>
+					<td>Sky</td>
+					<td>Magnolia</td>
+					<td>Vamp anthem</td>
+				</tr>
+			</table>
+		</div>
+	</div>
 </body>
+
 </html>
