--- a/6.html
+++ b/6.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
-<title>Drake</title>
-<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="style1.css">
+	<title>Drake</title>
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style1.css">
 </head>
+
 <body>
-<div class="main">
-<div class="logo">
-<div class="anim2">Drake</div>
-</div>
-	<div class="tresc">
-  <h2><a href="#ogol5">Opis</a> | <a href="#albumy5">Albumy</a> | <a href="#tworczosc5">Twórczość</a> | </h2>
-<a name="ogol5"><p><a href=https://pl.wikipedia.org/wiki/Drake_(raper) target="_blank">Drake </a>właśc. Aubrey Drake Graham (ur. 24 października 1986) – kanadyjski raper, piosenkarz i aktor.
-Rozpoczął karierę aktorską rolą Jimmy’ego Brooksa w serialu Degrassi: Nowe pokolenie. Przez długi czas był blisko związany z Young Money Entertainment, aż do czerwca 2009, kiedy to podpisał oficjalny kontrakt z wytwórnią. 15 czerwca 2010 ukazał się jego pierwszy album studyjny pt. Thank Me Later, który zadebiutował na szczycie Billboard 200, rozchodząc się w pierwszym tygodniu w 447 tys. kopii na terenie Stanów Zjednoczonych.
-Za minialbum So Far Gone otrzymał dwie nominacje do nagród Grammy. Podczas gali przyznano mu jedną statuetkę spośród przydzielonych mu nominacji. W 2013 zdobył nagrodę Grammy w kategorii „Najlepszy album rap/hip-hop” za płytę pt. Take Care.
-Współpracował z wieloma artystami, takimi jak m.in. DJ Khaled, Young Money, Jay-Z, Kanye West, Eminem, Young Jeezy, Mary J. Blige, Timbaland, Birdman, Trey Songz czy Jamie Foxx. Poza tym był autorem tekstów do piosenek Jazza Cartiera, Bishopa Brigante'a, Alicii Keys i Dr. Dre.</p></a>
-<a name="albumy5"><b>Albumy</b>
-<ul type="disc">
-<li>For all of the dogs</li>
-<li>More life</li>
-<li>Certified lover boy</li>
-<li>Take care</li>
-<li>Nothing was the same</li>
-<li>Scorpion</li>
-</ul></a>
-<hr>
-<a name="tworczosc5"><b>Muzyka</b></a>
-<table class="anim3">
-<tr>
-<td>IDGAF</td><td>God's plan</td><td>Rich flex</td><td>One dance</td><td>First person shooter</td>
-</tr>
-</table>
-</div>
-</div>
+	<div class="main">
+		<div class="logo">
+			<div class="anim2">Drake</div>
+		</div>
+		<div class="tresc">
+			<h2><a href="#ogol5">Opis</a> | <a href="#albumy5">Albumy</a> | <a href="#tworczosc5">Twórczość</a> | </h2>
+			<a name="ogol5">
+				<p><a href=https://pl.wikipedia.org/wiki/Drake_(raper) target="_blank">Drake </a>właśc. Aubrey Drake Graham (ur. 24 października 1986) – kanadyjski raper, piosenkarz i aktor. Rozpoczął karierę aktorską rolą Jimmy’ego Brooksa w serialu Degrassi: Nowe pokolenie. Przez długi czas był blisko związany z Young Money Entertainment, aż do czerwca 2009, kiedy to podpisał oficjalny kontrakt z wytwórnią. 15 czerwca 2010 ukazał się jego pierwszy album studyjny pt. Thank Me Later, który zadebiutował na szczycie Billboard 200, rozchodząc się w pierwszym tygodniu w 447 tys. kopii na terenie Stanów Zjednoczonych. Za minialbum So Far Gone otrzymał dwie nominacje do nagród Grammy. Podczas gali przyznano mu jedną statuetkę spośród przydzielonych mu nominacji. W 2013 zdobył nagrodę Grammy w kategorii „Najlepszy album rap/hip-hop” za płytę pt. Take Care. Współpracował z wieloma artystami, takimi jak m.in. DJ Khaled, Young Money, Jay-Z, Kanye West, Eminem, Young Jeezy, Mary J. Blige, Timbaland, Birdman, Trey Songz czy Jamie Foxx. Poza tym był autorem tekstów do piosenek Jazza Cartiera, Bishopa Brigante'a, Alicii Keys i Dr. Dre.</p>
+			</a>
+			<a name="albumy5"><b>Albumy</b>
+				<ul type="disc">
+					<li>For all of the dogs</li>
+					<li>More life</li>
+					<li>Certified lover boy</li>
+					<li>Take care</li>
+					<li>Nothing was the same</li>
+					<li>Scorpion</li>
+				</ul>
+			</a>
+			<hr>
+			<a name="tworczosc5"><b>Muzyka</b></a>
+			<table class="anim3">
+				<tr>
+					<td>IDGAF</td>
+					<td>God's plan</td>
+					<td>Rich flex</td>
+					<td>One dance</td>
+					<td>First person shooter</td>
+				</tr>
+			</table>
+		</div>
+	</div>
 </body>
+
 </html>
