--- a/opis.html
+++ b/opis.html
@@ -1,51 +1,41 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-<title>Opis</title>
-<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="style1.css">
-</head>
-<body>
-<div class="main">
-<div class="logo">
-	<div class="bg-img">
-  <div class="container">
-    <div class="topnav">
-      <a href="rapscena.html">Główna</a>
-      <a href="opis.html">Opis</a>
-		<a href="ranking.html">Ranking</a>
-      <a href="galeria.html">Galeria</a>
-      <a href="ankieta.html">Ankieta</a>
-    </div>
-  </div>
-</div>
-	<div class="h1">Opis rap sceny</div>
 
-</div>
-	<div class="link">
-			<a href="https://www.complex.com/music/a/j-mckinney/yeat-everything-you-need-to-know" target="ramka">Yeat</a>
-		|
-            <a href="https://www.vogue.it/moda/article/travis-scott-l-uomo" target="ramka">Travis Scott</a>
-		|
-            <a href="https://www.britannica.com/biography/Kendrick-Lamar" target="ramka">Kendrick Lamar</a>
-		|
-			<a href="https://www.britannica.com/biography/Eminem" target="ramka">Eminem</a>
-		|
-			<a href="https://thevogue.com/artists/playboi-carti/" target="ramka">Playboi Carti</a>
-		|
-			<a href="https://www.britannica.com/biography/Drake" target="ramka">Drake</a>
-		|
-			<a href="https://www.last.fm/music/Lil+Uzi+Vert/+wiki" target="ramka">Lil Uzi Vert</a>
+<head>
+	<title>Opis</title>
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style1.css">
+</head>
+
+<body>
+	<div class="main">
+		<div class="logo">
+			<div class="bg-img">
+				<div class="container">
+					<div class="topnav">
+						<a href="index.html">Główna</a>
+						<a href="opis.html">Opis</a>
+						<a href="ranking.html">Ranking</a>
+						<a href="galeria.html">Galeria</a>
+						<a href="ankieta.html">Ankieta</a>
+					</div>
+				</div>
+			</div>
+			<div class="h1">Opis rap sceny</div>
+		</div>
+		<div class="link">
+			<a href="https://www.complex.com/music/a/j-mckinney/yeat-everything-you-need-to-know" target="ramka">Yeat</a> | <a href="https://www.vogue.it/moda/article/travis-scott-l-uomo" target="ramka">Travis Scott</a> | <a href="https://www.britannica.com/biography/Kendrick-Lamar" target="ramka">Kendrick Lamar</a> | <a href="https://www.britannica.com/biography/Eminem" target="ramka">Eminem</a> | <a href="https://thevogue.com/artists/playboi-carti/" target="ramka">Playboi Carti</a> | <a href="https://www.britannica.com/biography/Drake" target="ramka">Drake</a> | <a href="https://www.last.fm/music/Lil+Uzi+Vert/+wiki" target="ramka">Lil Uzi Vert</a>
+		</div>
+		<div class="opisss">
+			<iframe name="ramka"></iframe>
+		</div>
+		<div class="images2">
+			<div class="h1">Zdjęcia</div>
+			<div><img src="multimedia/rap2.png" width="100%"></div>
+			<div><img src="multimedia/rap7.jpeg" width="100%"></div>
+		</div>
 	</div>
-	<div class="opisss">
-	<iframe name="ramka" width="1200px" height="720px" frameborder="0"></iframe>
-	</div>
-	<div class="images2">
-		<div class="h1">Zdjęcia</div>
-		<div><img src="multimedia/rap2.png" width="100%"></div>
-		<div><img src="multimedia/rap7.jpeg" width="100%"></div>
-	</div>
-	</div>
-<div class="stopka">Maksymilian Godlewski 2TB</div>
+	<div class="stopka">Maksymilian Godlewski 2TB</div>
 </body>
+
 </html>
