--- a/opis.html
+++ b/opis.html
@@ -24,10 +24,10 @@
 			<div class="h1">Opis rap sceny</div>
 		</div>
 		<div class="link">
-			<a href="https://www.complex.com/music/a/j-mckinney/yeat-everything-you-need-to-know" target="ramka">Yeat</a> | <a href="https://www.vogue.it/moda/article/travis-scott-l-uomo" target="ramka">Travis Scott</a> | <a href="https://www.britannica.com/biography/Kendrick-Lamar" target="ramka">Kendrick Lamar</a> | <a href="https://www.britannica.com/biography/Eminem" target="ramka">Eminem</a> | <a href="https://thevogue.com/artists/playboi-carti/" target="ramka">Playboi Carti</a> | <a href="https://www.britannica.com/biography/Drake" target="ramka">Drake</a> | <a href="https://www.last.fm/music/Lil+Uzi+Vert/+wiki" target="ramka">Lil Uzi Vert</a>
+			<a href="https://www.complex.com/music/a/j-mckinney/yeat-everything-you-need-to-know" target="_blank">Yeat</a> | <a href="https://www.vogue.it/moda/article/travis-scott-l-uomo" target="_blank">Travis Scott</a> | <a href="https://www.britannica.com/biography/Kendrick-Lamar" target="_blank">Kendrick Lamar</a> | <a href="https://www.britannica.com/biography/Eminem" target="_blank">Eminem</a> | <a href="https://thevogue.com/artists/playboi-carti/" target="_blank">Playboi Carti</a> | <a href="https://www.britannica.com/biography/Drake" target="_blank">Drake</a> | <a href="https://www.last.fm/music/Lil+Uzi+Vert/+wiki" target="_blank">Lil Uzi Vert</a>
 		</div>
 		<div class="opisss">
-			<iframe name="ramka"></iframe>
+			<iframe name="ramka" src=rampage.html></iframe>
 		</div>
 		<div class="images2">
 			<div class="h1">Zdjęcia</div>
